fix minor text alignments

--- a/src/app/shared/layout/footer/footer.component.css
+++ b/src/app/shared/layout/footer/footer.component.css
@@ -9,6 +9,10 @@ a {
   color: white;
 }
 
+h1 {
+  margin-bottom: 0;
+}
+
 .soc-icon {
   font-size: 1.7rem;
 }
