--- a/src/app/shared/layout/sidenav/sidenav.component.css
+++ b/src/app/shared/layout/sidenav/sidenav.component.css
@@ -14,6 +14,11 @@ h2 {
   padding: 1rem 1.5rem;
 }
 
+.close-icon {
+  font-size: 1.5rem;
+  margin: auto;
+}
+
 .spacer {
   flex: 1 1 auto;
 }
